--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="cardIcon"><img src="https://cdn0.iconfinder.com/data/icons/social-network-7/50/22-512.png" alt=""/></div>
               <div class="cardInner">
                 <h4>HTML</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium ante erat, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna tempor, eu  </p>
+                <p>有能力看著設計稿做出文字的編排、架構，利用SEO讓網站可以更容易被搜尋到，以及設計對使用者友善的體驗，有系統的規劃整體內容。</p>
               </div>
             </div>
           </div>
@@ -78,7 +78,7 @@
               <div class="cardIcon"><img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_960_720.png" alt=""/></div>
               <div class="cardInner">
                 <h4>Css</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium ante erat, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna tempor, eu </p>
+                <p>使用過業界格線系統，例如:Bootstrap,ElementUI，以及整體網頁的美化以及排版，位置規劃還有互動效果，字體、自行間距也有一定的了解。</p>
               </div>
             </div>
           </div>
@@ -89,16 +89,16 @@
               <div class="cardIcon"><img src="https://www.sketch.com/images/pages/press/sketch-press-kit/app-icons/sketch-mac-icon@2x.png" alt=""/></div>
               <div class="cardInner">
                 <h4>Sketch</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium ante erat, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna tempor, eu </p>
+                <p>可以自己設計常用icon以及各裝置所需要的排版原型，產出Wireframe，並與其他設計師討論修改合作，也可以製作流程圖來表達目前的設計目的。</p>
               </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="card wow bounceInRight">
-              <div class="cardIcon"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Adobe_Illustrator_CC_icon.svg/788px-Adobe_Illustrator_CC_icon.svg.png" alt=""/></div>
+              <div class="cardIcon"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/1200px-Adobe_After_Effects_CC_icon.svg.png" alt=""/></div>
               <div class="cardInner">
                 <h4>Ai</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium ante erat, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna tempor, eu  </p>
+                <p>使用過特效軟體以及一些剪接修改程式，美化並吸引使用者觀看稱家商品銷售率，對於產品製作片頭，對於公司製作開場LOGO以及全程字幕編輯。</p>
               </div>
             </div>
           </div>
@@ -110,10 +110,10 @@
         <h2 class="wow bounceInLeft">Experience</h2>
         <div class="timeline-group"> 
           <div class="timeline"></div>
-          <div class="timecard-left timecard-one wow bounceInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sollicitudin lacus lobortis, dapibus est id, rhoncus sem. Vivamus eu lorem quis lectus volutpat laoreet eget sed enim. Quisque ullamcorper maximus neque, id ullamcorper </div>
-          <div class="timecard-right timecard-two wow bounceInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sollicitudin lacus lobortis, dapibus est id, rhoncus sem. Vivamus eu lorem quis lectus volutpat laoreet eget sed enim. Quisque ullamcorper maximus neque, id ullamcorper </div>
-          <div class="timecard-left timecard-three wow bounceInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sollicitudin lacus lobortis, dapibus est id, rhoncus sem. Vivamus eu lorem quis lectus volutpat laoreet eget sed enim. Quisque ullamcorper maximus neque, id ullamcorper </div>
-          <div class="timecard-right timecard-four wow bounceInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sollicitudin lacus lobortis, dapibus est id, rhoncus sem. Vivamus eu lorem quis lectus volutpat laoreet eget sed enim. Quisque ullamcorper maximus neque, id ullamcorper </div>
+          <div class="timecard-left timecard-one wow bounceInUp"> 2020 因為興趣以及本身對於設計一些認識想要轉職為網頁設計師，所以在網路以及很多外國資源自學了一些HTML,CSS,JavaScript，AE所以對於產品形象頁面做了一些成品。</div>
+          <div class="timecard-right timecard-two wow bounceInUp">2018~2019，任職於鎂成實業股份有限公司，做系統安裝工程以及視聽媒體相關的工作，認識了影像、視訊、音訊、以及電影院規模的視聽工程，期間更認識到了整體系統架構流程還有設計使用例如:Mixer、Amplifier、PA等等。</div>
+          <div class="timecard-left timecard-three wow bounceInUp">2017畢業，實習於安恩嘉公司擔任產品測試工程師，協助設備檢測以及QA，學習了一些網路知識，對於網路有基本了解認識，也學習到了攝影機整體的製造還有類別。</div>
+          <div class="timecard-right timecard-four wow bounceInUp">2013~2016 就讀於台北科技大學 電子工程系，在校學習是積體電路等等方面電路知識，以及參加一些專題競賽，還有協助網頁產出。 </div>
         </div>
       </div>
     </div>
@@ -132,7 +132,7 @@
                 <div class="col-sm-6 TextBox">
                   <div class="text-left">
                     <h3>Good design</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p><a class="line" href="#">Show project</a>
+                    <p>　　我的設計方向是讓使用者進入網頁會有印象深刻的感覺，利用一些微互動讓網頁整體性看起來不會像是傳統網頁一樣制式更不會被網頁所困惑，以微互動引導使用者瀏覽整個頁面，並且對於網頁製造一些回頭率，或者引起使用者介紹他人的意願。</p><a class="line" href="https://like4628.github.io/counter/#TrendPage" target="_blank">Show project</a>
                   </div>
                 </div>
               </div>
@@ -146,7 +146,7 @@
                 <div class="col-sm-6 TextBox order-sm-1">
                   <div class="text-right">
                     <h3>Ambition </h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p><a class="line" href="#">Show project</a>
+                    <p>　　希望打造出一個時尚且風格獨特有吸引力的互動式網頁，除了一些美化更可以讓使用者有想繼續使用的想法，為此我看了許多國外有名的設計網頁，通常偏向於破格式，但由於現在手機瀏覽者更為多數，在美觀以及排版會有一些地方沒辦法兩全其美。</p><a class="line" href="https://like4628.github.io/eSport/" target="_blank">Show project</a>
                   </div>
                 </div>
               </div>
@@ -160,7 +160,7 @@
                 <div class="col-sm-6 TextBox">
                   <div class="text-left">
                     <h3>Imagination in motion</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p><a class="line" href="#">Show project</a>
+                    <p>　　除了網頁設計之外我也有研究一些關於動態圖像的一些技巧，目的是為了如果未來有需要產品介紹以及開頭，要如何吸引使用者觀看影片了解產品並且達到購買意願，為此我也有學習關於視覺動態特效表達及附加特效。</p><a class="line" href="https://www.youtube.com/channel/UC463NgYamrU0YDScH3VjIGQ/" target="_blank">Show project</a>
                   </div>
                 </div>
               </div>
@@ -174,7 +174,7 @@
                 <div class="col-sm-6 TextBox order-sm-1">
                   <div class="text-right">
                     <h3>Future develope</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p><a class="line" href="#">Show project</a>
+                    <p>　　未來發展我更希望可以與各方面的設計人才一起溝通、進步，並且達到公司的需求製作出符合公司的形象網頁，如果有產品需要推廣，那就更適合網頁這個媒介去傳達給未來潛在的客戶。</p><a class="line" href="https://like4628.github.io/supercar/" target="_blank">Show project</a>
                   </div>
                 </div>
               </div>
@@ -220,7 +220,7 @@
         </form>
         <div class="bottomInfo">
           <div class="or"><span> OR</span></div>
-          <div class="info"><span class="mail">like4628@yahoo.com.tw</span><span class="tel"> 0925307312</span></div>
+          <div class="info"><span class="mail">t102332026@ntut.org.tw</span><span class="tel"> 0925307312</span></div>
           <div class="infoIcon"><a href="https://line.me/ti/p/aJVH0cDKSp" target="_blank"><i class="fab fa-line"> </i></a><a href="https://www.facebook.com/profile.php?id=100003999642145" target="_blank"><i class="fab fa-facebook-square"></i></a><a href="https://www.instagram.com/shaiya_chen/" target="_blank"><i class="fab fa-instagram"></i></a></div>
         </div>
       </div>
@@ -228,7 +228,7 @@
     <footer class="footer">
       <div class="container">
         <div class="finaltext">
-          <p class="par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos quaerat ut reprehenderit magni ea veritatis quidem voluptatibus porro nostrum. Alias tenetur beatae quia aperiam culpa </p>
+          <p class="par">一個熱愛設計以及對於視覺特效有一些想法的人，想把視覺以及震撼的內容傳達給使用者</p>
           <p class="copy">CopyRight @2019 Web Design by Nash</p>
         </div>
       </div>
