--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                 <div class="col-sm-6 TextBox order-sm-1">
                   <div class="text-right">
                     <h3>電子競技</h3>
-                    <p>　　由於喜歡電子競技以及一些技術，有感而發製作了一個關於競技的網頁，這邊利用bootstrap的格線系統讓排版比較容易控制，也加了一些互動特效搭配，例如裡面的banner泡泡以及圖片滑動，放大縮小等等讓網頁不枯燥乏味，增加互動性。</p><a class="line" href="https://like4628.github.io/eSport/" target="_blank">Show project</a>
+                    <p>　　熱愛電子競技和技術，有感而發製作一個關於競技的網頁，利用Bootstrap格線系統讓排版容易控制，加了一點互動特效搭配，例如Banner動態泡泡以及圖片滑動，放大縮小等讓網頁不枯燥乏味，增加互動性。</p><a class="line" href="https://like4628.github.io/eSport/" target="_blank">Show project</a>
                   </div>
                 </div>
               </div>
               <div class="row wow bounceInRight">
-                <div class="col-sm-6 imgBox"><a href="https://i.imgur.com/ELWKNvc.png" data-fancybox="data-fancybox">
+                <div class="col-sm-6 imgBox"><a href="https://i.imgur.com/QInp9Uu.png" data-fancybox="data-fancybox">
                     <div class="picBox">
                       <div class="pic-inner pic-inner-resolution">
                         <div class="pic pic3"></div>
@@ -161,7 +161,7 @@
                 <div class="col-sm-6 TextBox">
                   <div class="text-left">
                     <h3>跑車展示</h3>
-                    <p>　　喜歡跑車，也有一些研究，剛好利用這個興趣製作了一些世界著名的跑車介紹，此網頁也是利用bootstrap的方式製作，這個比較基本的圖片互動放大效果也是剛學習的第一個成品。</p><a class="line" href="https://like4628.github.io/supercar/" target="_blank">Show project</a>
+                    <p>　　喜歡跑車，有一些研究，利用這個興趣製作了一些世界著名的跑車介紹，此網頁也是利用bootstrap的方式製作，這個比較基本的圖片互動放大效果也是剛學習的第一個成品。</p><a class="line" href="https://like4628.github.io/supercar/" target="_blank">Show project</a>
                   </div>
                 </div>
               </div>
@@ -175,7 +175,7 @@
                 <div class="col-sm-6 TextBox order-sm-1">
                   <div class="text-right">
                     <h3>AE 設計</h3>
-                    <p>　　在學習網頁過程中意外發現特效以及簡短度畫製作也蠻有趣，所以就自己多學了AE、PR、C4D等等的軟體可以做出一些簡單的開場動畫以及產品介紹的影片。</p><a class="line" href="https://www.youtube.com/channel/UC463NgYamrU0YDScH3VjIGQ/" target="_blank">Show project</a>
+                    <p>　　學習網頁過程中意外發現特效以及動畫製作蠻有趣的，所以嘗試設計關於 AE 、 PR 、 C4D等等的軟體可以做出一些簡單的開場動畫以及產品介紹的影片。</p><a class="line" href="https://www.youtube.com/channel/UC463NgYamrU0YDScH3VjIGQ/" target="_blank">Show project</a>
                   </div>
                 </div>
               </div>
