--- a/index.html
+++ b/index.html
@@ -112,11 +112,34 @@
             <div class="col-sm-6">
               <div class="card wow bounceInRight">
                 <div class="cardIcon"><img
+                    src="https://i.pinimg.com/originals/a5/58/b4/a558b426cb8973523f37bbed94cf0f09.png" alt="" /></div>
+                <div class="cardInner">
+                  <h4>Figma</h4>
+                  <p>利用Figma製作原型以及初期稿子設計，Wireframe 和 UI Design，規格表交付以及與其他設計師協作，為產品減少溝通成本。</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="card wow bounceInLeft">
+                <div class="cardIcon"><img
+                    src="https://cdn.iconscout.com/icon/free/png-256/adobe-premiere-pro-2522527-2132715.png" alt="" />
+                </div>
+                <div class="cardInner">
+                  <h4>PR</h4>
+                  <p>利用拍攝或後製完成的影片加以處理，包括剪接、字幕編排校正、聲音的降噪、或是綜藝效果等等的合成，讓影片看起來有趣生動。</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card wow bounceInLeft">
+                <div class="cardIcon"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/1200px-Adobe_After_Effects_CC_icon.svg.png"
                     alt="" /></div>
                 <div class="cardInner">
                   <h4>AE</h4>
-                  <p>使用過特效軟體以及一些剪接修改程式，美化並吸引使用者觀看增加商品銷售率，對於產品製作片頭，對於公司製作開場LOGO以及全程字幕編輯。</p>
+                  <p>產品的包裝以及設計特效後製，強化產品特點吸引使用者觀看，增加商品銷售率，在製作片頭、公司開場LOGO有一定的經驗，給觀眾震撼的視覺體驗</p>
                 </div>
               </div>
             </div>
