update AOS animation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.css'>
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css">
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -77,90 +78,109 @@
           <h2 class="wow bounceInLeft">Skill</h2>
           <div class="row">
             <div class="col-sm-6">
-              <div class="card wow bounceInLeft">
-                <div class="cardIcon"><img src="https://cdn0.iconfinder.com/data/icons/social-network-7/50/22-512.png"
-                    alt="" /></div>
-                <div class="cardInner">
-                  <h4>HTML</h4>
-                  <p>有能力看著設計稿做出文字的編排、架構，利用SEO讓網站可以更容易被搜尋到，以及設計對使用者友善的體驗，有系統的規劃整體內容。</p>
+              <div data-aos="fade-right">
+                <div class="card">
+                  <div class="cardIcon"><img src="https://cdn0.iconfinder.com/data/icons/social-network-7/50/22-512.png"
+                      alt="" /></div>
+                  <div class="cardInner">
+                    <h4>HTML</h4>
+                    <p>有能力看著設計稿做出文字的編排、架構，利用SEO讓網站可以更容易被搜尋到，以及設計對使用者友善的體驗，有系統的規劃整體內容。</p>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-sm-6">
-              <div class="card wow bounceInLeft">
-                <div class="cardIcon"><img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_960_720.png"
-                    alt="" /></div>
-                <div class="cardInner">
-                  <h4>Css</h4>
-                  <p>使用過格線系統，Bootstrap , ElementUI。對於整體網頁的美化以及排版，位置規劃還有互動特效效果，字體、字型間距也有一定的了解。</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="card wow bounceInRight">
-                <div class="cardIcon"><img
-                    src="https://www.sketch.com/images/pages/press/sketch-press-kit/app-icons/sketch-mac-icon@2x.png"
-                    alt="" /></div>
-                <div class="cardInner">
-                  <h4>Sketch</h4>
-                  <p>可以自己設計常用icon以及各裝置所需要的排版原型，產出Wireframe，並與其他設計師討論修改合作，也可以製作流程圖來表達目前的設計目的。</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card wow bounceInRight">
-                <div class="cardIcon"><img
-                    src="https://i.pinimg.com/originals/a5/58/b4/a558b426cb8973523f37bbed94cf0f09.png" alt="" /></div>
-                <div class="cardInner">
-                  <h4>Figma</h4>
-                  <p>利用Figma製作原型以及初期稿子設計，Wireframe 和 UI Design，規格表交付以及與其他設計師協作，為產品減少溝通成本。</p>
+              <div data-aos="fade-left">
+                <div class="card">
+                  <div class="cardIcon"><img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_960_720.png"
+                      alt="" /></div>
+                  <div class="cardInner">
+                    <h4>Css</h4>
+                    <p>使用過格線系統，Bootstrap , ElementUI。對於整體網頁的美化以及排版，位置規劃還有互動特效效果，字體、字型間距也有一定的了解。</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-6">
-              <div class="card wow bounceInLeft">
-                <div class="cardIcon"><img
-                    src="https://cdn.iconscout.com/icon/free/png-256/adobe-premiere-pro-2522527-2132715.png" alt="" />
+              <div data-aos="fade-right">
+                <div class="card">
+                  <div class="cardIcon"><img
+                      src="https://www.sketch.com/images/pages/press/sketch-press-kit/app-icons/sketch-mac-icon@2x.png"
+                      alt="" /></div>
+                  <div class="cardInner">
+                    <h4>Sketch</h4>
+                    <p>可以自己設計常用icon以及各裝置所需要的排版原型，產出Wireframe，並與其他設計師討論修改合作，也可以製作流程圖來表達目前的設計目的。</p>
+                  </div>
                 </div>
-                <div class="cardInner">
-                  <h4>PR</h4>
-                  <p>利用拍攝或後製完成的影片加以處理，包括剪接、字幕編排校正、聲音的降噪、或是綜藝效果等等的合成，讓影片看起來有趣生動。</p>
+            </div>
+            </div>
+            <div class="col-sm-6">
+              <div data-aos="fade-left">
+                <div class="card">
+                  <div class="cardIcon"><img
+                      src="https://i.pinimg.com/originals/a5/58/b4/a558b426cb8973523f37bbed94cf0f09.png" alt="" /></div>
+                  <div class="cardInner">
+                    <h4>Figma</h4>
+                    <p>利用Figma製作原型以及初期稿子設計，Wireframe 和 UI Design，規格表交付以及與其他設計師協作，為產品減少溝通成本。</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div data-aos="fade-right">
+                <div class="card ">
+                  <div class="cardIcon"><img
+                      src="https://cdn.iconscout.com/icon/free/png-256/adobe-premiere-pro-2522527-2132715.png" alt="" />
+                  </div>
+                  <div class="cardInner">
+                    <h4>PR</h4>
+                    <p>利用拍攝或後製完成的影片加以處理，包括剪接、字幕編排校正、聲音的降噪、或是綜藝效果等等的合成，讓影片看起來有趣生動。</p>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-sm-6">
-              <div class="card wow bounceInLeft">
-                <div class="cardIcon"><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/1200px-Adobe_After_Effects_CC_icon.svg.png"
-                    alt="" /></div>
-                <div class="cardInner">
-                  <h4>AE</h4>
-                  <p>產品的包裝以及設計特效後製，強化產品特點吸引使用者觀看，增加商品銷售率，在製作片頭、公司開場LOGO有一定的經驗，給觀眾震撼的視覺體驗</p>
+              <div data-aos="fade-left">
+                <div class="card ">
+                  <div class="cardIcon"><img
+                      src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/1200px-Adobe_After_Effects_CC_icon.svg.png"
+                      alt="" /></div>
+                  <div class="cardInner">
+                    <h4>AE</h4>
+                    <p>產品的包裝以及設計特效後製，強化產品特點吸引使用者觀看，增加商品銷售率，在製作片頭、公司開場LOGO有一定的經驗，給觀眾震撼的視覺體驗</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      //Experience
       <div class="experience" id="ExperiencePage">
         <div class="container">
           <h2 class="wow bounceInLeft">Experience</h2>
           <div class="timeline-group">
             <div class="timeline"></div>
-            <div class="timecard-left timecard-one wow bounceInUp"> 2020
-              因為興趣以及本身對於設計一些認識想要轉職為網頁設計師，所以在網路以及很多外國資源自學了一些HTML,CSS,JavaScript，AE所以對於產品形象頁面做了一些成品。</div>
-            <div class="timecard-right timecard-two wow bounceInUp">
-              2018~2019，任職於鎂成實業股份有限公司，做系統安裝工程以及視聽媒體相關的工作，認識了影像、視訊、音訊、以及電影院規模的視聽工程，期間更認識到了整體系統架構流程還有設計使用例如:Mixer、Amplifier、PA等等。
+            <div data-aos="zoom-in">
+              <div class="timecard-left timecard-one "> 2020
+                因為興趣以及本身對於設計一些認識想要轉職為網頁設計師，所以在網路以及很多外國資源自學了一些HTML,CSS,JavaScript，AE所以對於產品形象頁面做了一些成品。</div>
             </div>
+            <div data-aos="zoom-in">
+              <div class="timecard-right timecard-two wow bounceInUp">
+                2018~2019，任職於鎂成實業股份有限公司，做系統安裝工程以及視聽媒體相關的工作，認識了影像、視訊、音訊、以及電影院規模的視聽工程，期間更認識到了整體系統架構流程還有設計使用例如:Mixer、Amplifier、PA等等。
+              </div>
+          </div>
+          <div data-aos="zoom-in">
             <div class="timecard-left timecard-three wow bounceInUp">
               2017畢業，實習於安恩嘉公司擔任產品測試工程師，協助設備檢測以及QA，學習了一些網路知識，對於網路有基本了解認識，也學習到了攝影機整體的製造還有類別。</div>
             <div class="timecard-right timecard-four wow bounceInUp">2013~2016 就讀於台北科技大學
               電子工程系，在校學習是積體電路等等方面電路知識，以及參加一些專題競賽，還有協助網頁產出。 </div>
           </div>
+        </div>
         </div>
       </div>
       <div class="work lean-bg-top-right" id="WorksPage">
@@ -300,6 +320,7 @@
   </div>
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.js'></script>
   <script src="./script.js"></script>
