--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <body>
   <!-- partial:index.partial.html -->
   <div class="wrapper">
+    <!-- //progress pink  skroll.js-->
+    <div class="progress" data-0="width:0%;background:#c87db4" data-end="width:100%;" class=""></div>
     <div class="bg"></div>
     <div class="header jsHeader">
       <div class="container">
@@ -35,6 +37,7 @@
               <div class="bar bar2"></div>
               <div class="bar bar3"></div>
             </a>
+
             <div class="responseMenu" id="response">
               <div class="container"><a class="responseClose" href="#">
                   <div class="bar bar4"></div>
@@ -322,6 +325,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.js'></script>
   <script src="./script.js"></script>
 
