--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
           </div>
         </div>
       </div>
+      <div id="skrollr-body">
+        <div class="progress" data-0="width:0%;background:#c87db4" data-end="width:100%;" class=""></div>
+      </div> 
       <!-- //progress pink  skroll.js-->
-      <div class="progress" data-0="width:0%;background:#c87db4" data-end="width:100%;" class=""></div>
+      
     </div>
     <div class="main">
       <div class="intro" id="topPage">
