--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="fas fa-quote-right"></div>
           </div>
           <p>I want to be a professional fron-end engineer</p>
-          <p>I am a fresh man in work</p><a href="#">Sonebody-</a><span> for everyone</span>
+          <p>I am a fresh man in work</p><a href="#">Somebody-</a><span> for everyone</span>
         </div>
       </div>
       <div class="skill lean-bg-bottom-left" id="skillPage">
