--- a/eng.html
+++ b/eng.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./engstyle.css" />
 </head>
 
 <body>
@@ -35,7 +35,7 @@
             </a>
           </div>
           <div class="right">
-            <a class="languageChange" href="./eng.html">English</a>
+            <a class="languageChange" href="./index.html">中文</a>
             <a class="menu" href="#response">
               <div class="bar bar1"></div>
               <div class="bar bar2"></div>
@@ -106,7 +106,8 @@
                   <div class="cardInner">
                     <h4>HTML</h4>
                     <p>
-                      有能力看著設計稿做出文字的編排、架構，利用SEO讓網站可以更容易被搜尋到，以及設計對使用者友善的體驗，有系統的規劃整體內容。
+                      Have ability to design website from design draft, add SEO let website display easily, friendly
+                      with user experience.
                     </p>
                   </div>
                 </div>
@@ -122,8 +123,9 @@
                   <div class="cardInner">
                     <h4>Css</h4>
                     <p>
-                      使用過格線系統，Bootstrap ,
-                      ElementUI。對於整體網頁的美化以及排版，位置規劃還有互動特效效果，字體、字型間距也有一定的了解。
+                      Using grid system Bootstrap ElementUI etc.., beautify web and expand interactive effect
+                      understand
+                      font space and font family.
                     </p>
                   </div>
                 </div>
@@ -140,7 +142,8 @@
                   <div class="cardInner">
                     <h4>Sketch</h4>
                     <p>
-                      可以自己設計常用icon以及各裝置所需要的排版原型，產出Wireframe，並與其他設計師討論修改合作，也可以製作流程圖來表達目前的設計目的。
+                      Design icons prototype every devices, make wireframe and flow chart
+                      to explain goal, work together with other designer.
                     </p>
                   </div>
                 </div>
@@ -155,8 +158,8 @@
                   <div class="cardInner">
                     <h4>Figma</h4>
                     <p>
-                      利用Figma製作原型以及初期稿子設計，Wireframe 和 UI
-                      Design，規格表交付以及與其他設計師協作，為產品減少溝通成本。
+                      Use Figma to make prototype and initial design including Wireframe、UI design, spec deliver and
+                      associate with other designer.
                     </p>
                   </div>
                 </div>
@@ -174,7 +177,7 @@
                   <div class="cardInner">
                     <h4>PR</h4>
                     <p>
-                      利用拍攝或後製完成的影片加以處理，包括剪接、字幕編排校正、聲音的降噪、或是綜藝效果等等的合成，讓影片看起來有趣生動。
+                      Have alility to edit、caption Correction、audio denoise or some effects to make video colorful.
                     </p>
                   </div>
                 </div>
@@ -189,7 +192,9 @@
                   <div class="cardInner">
                     <h4>AE</h4>
                     <p>
-                      產品的包裝以及設計特效後製，強化產品特點吸引使用者觀看，增加商品銷售率，在製作片頭、公司開場LOGO有一定的經驗，給觀眾震撼的視覺體驗。
+                      Product video design and VFX, intense feature of products
+                      to abstract client. Experiments in
+                      making companies logo, show Shock visual.
                     </p>
                   </div>
                 </div>
@@ -206,22 +211,25 @@
             <div class="timeline"></div>
             <div data-aos="zoom-in">
               <div class="timecard-left timecard-one">
-                2020
-                因為興趣以及本身對於設計一些認識想要轉職為網頁設計師，所以在網路以及很多外國資源自學了一些HTML,CSS,JavaScript，AE所以對於產品形象頁面做了一些成品。
+                2020，Due to my favorate, I want to transfer to web designer, learn knowledge from intenet course and
+                forum, I study HTML、CSS、javascript. I also learn VFX and video edit.
               </div>
             </div>
             <div data-aos="zoom-in">
               <div class="timecard-right timecard-two wow bounceInUp">
-                2018~2019，任職於鎂成實業股份有限公司，做系統安裝工程以及視聽媒體相關的工作，認識了影像、視訊、音訊、以及電影院規模的視聽工程，期間更認識到了整體系統架構流程還有設計使用例如:Mixer、Amplifier、PA等等。
+                2018~2019， as an engineer in Meicheng, associate with system intergration 、audio & video, learn about
+                engineering in movie theater and conference room, family with Mixer、Mixer、Amplifier、PA etc...
               </div>
             </div>
             <div data-aos="zoom-in">
               <div class="timecard-left timecard-three wow bounceInUp">
-                2017畢業，實習於安恩嘉公司擔任產品測試工程師，協助設備檢測以及QA，學習了一些網路知識，對於網路有基本了解認識，也學習到了攝影機整體的製造還有類別。
+                2017， graduated from NTUT，as a product test engineer in Diviotec, associate with devices testing and
+                QA, learn about surveillance camera, so I have basic in internet and camera.
               </div>
               <div class="timecard-right timecard-four wow bounceInUp">
-                2013~2016 就讀於台北科技大學
-                電子工程系，在校學習是積體電路等等方面電路知識，以及參加一些專題競賽，還有協助網頁產出。
+                2013， Study in Nation Taipei University of Tachnology Electronic department, major in integrated
+                circuit, have some experients in design circuit and design website.
+
               </div>
             </div>
           </div>
@@ -245,9 +253,10 @@
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>電子計時器</h3>
+                      <h3>Digital counter</h3>
                       <p>
-                        FullPage整頁式結構，這個網頁是介紹一個產品計時器，利用fullPage讓使用者可以一頁式的瀏覽，一次跳一頁的方式呈現此產品的資訊，在手機也做了響應式的優化。
+                        This topic is Digital counter, finish by fullpage.js, user can browse
+                        by sliding a page and optimization in mobile version.
                       </p>
                       <a class="line" href="https://like4628.github.io/counter/#TrendPage" target="_blank">Show
                         project</a>
@@ -266,9 +275,12 @@
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>電子競技</h3>
+                      <h3>Electronic sport</h3>
                       <p>
-                        熱愛電子競技和技術，有感而發製作一個關於競技的網頁，利用Bootstrap格線系統讓排版容易控制，加了一點互動特效搭配，例如Banner動態泡泡以及圖片滑動，放大縮小等讓網頁不枯燥乏味，增加互動性。
+                        Enthusiastic for electronic sports and tech so I make a web to display, this website
+                        finish by Bootstrap. Add some interactive effect like bubbles in banner I Also increase picture
+                        scale
+                        size to let user more fun.
                       </p>
                       <a class="line" href="https://like4628.github.io/eSport/" target="_blank">Show project</a>
                     </div>
@@ -286,9 +298,11 @@
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>跑車展示</h3>
+                      <h3>Supercar display</h3>
                       <p>
-                        喜歡跑車，有一些研究，利用這個興趣製作了一些世界著名的跑車介紹，此網頁也是利用bootstrap的方式製作，這個比較基本的圖片互動放大效果也是剛學習的第一個成品。
+                        I like supercar, so this website introduce some famous supercar in the world by Bootstrap, a
+                        basic composing use some picture and scale effect.
+
                       </p>
                       <a class="line" href="https://like4628.github.io/supercar/" target="_blank">Show project</a>
                     </div>
@@ -306,11 +320,12 @@
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>AE 設計</h3>
+                      <h3>AE design</h3>
                       <p>
-                        學習網頁過程中意外發現特效以及動畫製作蠻有趣的，所以嘗試設計關於
-                        AE 、 PR 、
-                        C4D等等的軟體可以做出一些簡單的開場動畫以及產品介紹的影片。
+                        During Study website technology I found effects and animations. It is grateful to use in design
+                        web,
+                        so I try to learn more about AE、PR 、C4D etc...
+
                       </p>
                       <a class="line" href="https://www.youtube.com/channel/UC463NgYamrU0YDScH3VjIGQ/"
                         target="_blank">Show project</a>
@@ -377,7 +392,7 @@
         <div class="container">
           <div class="finaltext">
             <p class="par">
-              一個熱愛設計以及對於視覺特效有一些想法的人，想把視覺以及震撼的內容傳達給使用者
+              A person who like design and VFX.Has many plenty ideas ,share visual and ambition to user
             </p>
             <p class="copy">CopyRight @2019 Web Design by Nash</p>
           </div>
